fabicon; fix font on firefox

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
-  font: 12px Courier;
+  font-size: 12px;
+  font-family: Courier New, Arial, Helvetica, sans-serif;
   overflow-x: hidden;
 }
